# real_uav_control

./: README.md
move_control/: CMakeLists.txt  package.xml
move_control/include/mavros2px4ctrl/: mavros2px4ctrl.h
move_control/include/move_control/: mavros_px4ctrl.h
move_control/include/se3control/: jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h  se3control.h
move_control/launch/: real_uav.launch  real_world_uav.launch  sim_uav.launch
move_control/msg/: PositionReference.msg
move_control/src/: mavros_px4ctrl.cpp  mavros_px4ctrl_node.cpp  single_uav_control.cpp  uav_simple_control.cpp
move_control/src/mavros2px4ctrl/: mavros2px4ctrl.cpp  mavros2px4ctrl_node.cpp
move_control/src/se3control/: jerk_tracking_control.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp  se3control.cpp
vrpn_client_ros/: CMakeLists.txt
vrpn_client_ros/launch/: sample.launch
vrpn_client_ros/src/: vrpn_to_mavros.cpp
